Create Instructions page
Nothing is linked yet. I left a template gif which will be replaced by
the real thing in the future.

--- a/client/src/pages/consent.module.css
+++ b/client/src/pages/consent.module.css
@@ -11,10 +11,10 @@
   margin: 10px 0;
 }
 
-#content {
-  margin: 15px 0;
-}
-
 #buttonContainer {
   margin-top: 20px;
+}
+
+.content {
+  margin: 15px 0;
 }
