--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,12 @@
+* {
+  --pageWidth: 1024px;
+}
+
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
@@ -11,14 +16,14 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
-  min-height: 500px;
-
+  height: 100%;
   color: white;
   font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(120deg, #ffc53f 0%, #fa709a 60%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 code {
@@ -43,5 +48,6 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
+  /* height: 100%; */
+  /* overflow: hidden; */
 }
