--- a/client/src/components/button.module.css
+++ b/client/src/components/button.module.css
@@ -5,7 +5,7 @@
 }
 
 .label,
-.labelDisabled {
+.labelInverted {
   display: flex;
   flex-shrink: 0;
   justify-content: center;
@@ -15,19 +15,33 @@
   padding: 10px 25px;
   font-size: 20px;
   text-align: center;
-  color: white;
   transition: 0.2s;
   z-index: 1;
   /* min-width: 150px; */
   border-style: solid;
   border-width: 2px;
-  border-color: white;
   border-radius: 60px;
+}
+
+.label {
+  color: white;
+  border-color: white;
+}
+
+.labelInverted {
+  color: black;
+  border-color: black;
 }
 
 @media only screen and (min-width: 700px) {
   .label:hover {
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.25);
+  }
+
+  .labelInverted:hover {
+    cursor: pointer;
+    color: var(--pink);
+    border-color: var(--pink);
   }
 }
