--- a/client/src/pages/scenario.module.css
+++ b/client/src/pages/scenario.module.css
@@ -10,30 +10,27 @@
 }
 
 #title {
-  margin: 10px 0;
+  margin-top: 5px;
 }
 
-#content {
-  margin: 15px 0;
+#subtitle {
+  margin-bottom: 5px;
 }
 
-.splitContent {
+.display {
   display: flex;
-  width: 100%;
-  margin: 30px 0;
+  justify-content: space-around;
+  justify-content: center;
+  width: max-content;
+  padding: 25px;
+  margin-top: 20px;
+  background-color: white;
+  border-radius: 30px;
 }
 
-.pictureAsset {
-  display: flex;
-  height: 256px;
-  border-radius: 40px;
-}
-
-.quadrant {
+.content {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  margin: 0 10px;
-  justify-content: center;
   align-items: center;
+  margin: 25px 0;
 }
