--- a/client/src/pages/session/scenario.module.css
+++ b/client/src/pages/session/scenario.module.css
@@ -3,7 +3,7 @@
   width: 100vw;
   max-width: var(--pageWidth);
   height: 100vh;
-  margin-top: 5vh;
+  /* margin-top: 5vh; */
   flex-direction: column;
   align-items: center;
   text-align: center;
